--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
     font-family: "Lexend", sans-serif;
 }
 
+
+
 main {
     gap: 3em;
     display: flex;
@@ -57,7 +59,7 @@ main {
     /* gap: 0.3em; */
 
     h2 {
-        font-size: 3z1.2em;
+        font-size: 1.4em;
         font-weight: bold;
     }
 
@@ -77,12 +79,93 @@ main {
     margin: auto;
     max-width: 450px;
     border: 1px solid lightgray;
+    border-radius: 20px;
+    backdrop-filter: blur(18px);
+
 }
 
 .person-container {
     display: flex;
+    height: 180px;
+    align-items: center;
+    gap: 2.5em;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: rgba(219, 219, 219, 0.33);
 
     .avatar {
         width: 150px;
+        border-radius: 20px;
     }
+}
+
+.person-info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.person-info h2 {
+    font-size: 1.4em;
+    font-weight: 600;
+}
+
+.person-info p {
+    font-size: 1em;
+    font-weight: 400;
+}
+
+
+
+/* ----------- BEKIJK MEER BUTTON ----------- */
+.bekijk-btn {
+    background: black;
+    color: white;
+    padding: 0.35em;
+    padding-left: 1.2em;
+    font-size: 0.8em;
+    border-radius: 12px;
+    border: none;
+    display: flex;
+    align-items: center;
+    box-shadow: inset 0 0 1.6em -0.6em black;
+    overflow: hidden;
+    position: relative;
+    height: 27%;
+    padding-right: 3.3em;
+    cursor: pointer;
+}
+
+.bekijk-btn .icon {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em black;
+    right: 0.3em;
+    transition: all 0.3s;
+}
+
+.bekijk-btn:hover .icon {
+    width: calc(100% - 0.6em);
+}
+
+.bekijk-btn .icon svg {
+    width: 1.1em;
+    transition: transform 0.3s;
+    color: black;
+}
+
+.bekijk-btn:hover .icon svg {
+    transform: translateX(0.1em);
+}
+
+.bekijk-btnn:active .icon {
+    transform: scale(0.95);
 }
