--- a/styles/style.css
+++ b/styles/style.css
@@ -47,8 +47,24 @@ main {
     right: 0;
     top: 15px;
     width: 150px;
-    padding: 5px;
     margin: auto;
+
+    background-color: #fafbfc;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+    border-radius: 6px;
+    color: black;
+    cursor: pointer;
+    /* display: inline-block; */
+    font-size: 13px;
+    padding: 6px 16px;
+    white-space: nowrap;
+    text-decoration: none;
+}
+
+.beluister-btn:hover {
+    background-color: #e1e1e1;
+    text-decoration: none;
+    transition-duration: 0.1s;
 }
 
 .album-info {
@@ -135,6 +151,8 @@ main {
     height: 27%;
     padding-right: 3.3em;
     cursor: pointer;
+    text-decoration: none;
+
 }
 
 .bekijk-btn .icon {
