--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ body {
     grid-template-rows: 1fr 1fr;
     margin: 0 auto 0 auto;
     max-width: 400px;
+      max-height: 536px;
     background-color: #000000;
 }
 
@@ -62,8 +63,7 @@ body {
 
 .card-info {
     margin: 10px auto 0 auto;
-    border: #1ED760 solid 1px;
-    box-shadow: #fff 0px 0px 10px;
+    border-top: #1ED760 solid 1px;
     grid-column-start: 1;
     grid-row-start: 2;
     grid-row-end: -1;
@@ -73,13 +73,12 @@ body {
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     grid-template-rows: 1fr;
-    max-height: 75px;
     width: 100%;
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border: #1ED760 solid 2px;
     border-radius: 10em;
     margin: auto 0 auto 0;
@@ -90,6 +89,7 @@ body {
     justify-self: start;
     align-self: center;
     margin-left: 10px;
+    object-fit: cover;
 }
 
 .card-info h2 {
@@ -120,7 +120,7 @@ body {
 
 .swiper {
     width: 400px;
-    height: 490px;
+    height: 540px;
     background-color: none;
 }
 
