--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,6 @@ body {
     color: #1ED760;
     padding: 10px;
     text-align: center;
-    border-radius: 0 0 10px 10px;
     grid-row-start: 1;
     grid-row-end: 1;
     grid-column-start: 1;
@@ -62,7 +61,7 @@ body {
 }
 
 .card-info {
-    margin: 10px auto 0 auto;
+    margin: 0 auto 0 auto;
     border-top: #1ED760 solid 1px;
     grid-column-start: 1;
     grid-row-start: 2;
