--- a/styles/style.css
+++ b/styles/style.css
@@ -135,8 +135,9 @@ body {
 	
  @media only screen and (max-width: 600px) {
 	 .swiper-button-next,
-	 .swiper-button-prev{
-	 display: none;}
+	 .swiper-button-prev,
+	 .swiper-button{
+	 display: none !important;}
 	 width: 100%;
      max-width: 100%;
      max-height: none;
